Add subsummary paragraph to index.html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <section>
           <h2>Professional Summary</h2>
           <p id="summary"></p>
+          <p id="subsummary"></p>
         </section>
 
         <section>
