--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <header>
         <h1 id="name"></h1>
         <h2 id="title"></h2>
+        <p id="subsummary"></p>
         <p id="contact"></p>
         <p id="links"></p>
       </header>
