--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
         </section>
 
         <section>
+          <h2>Selected Projects & Research</h2>
+          <div id="projects">
+            <!-- Projects will be dynamically loaded -->
+          </div>
+        </section>
+
+        <section>
           <h2>Professional Experience</h2>
           <div id="experience">
             <!-- Experience will be dynamically loaded -->
@@ -38,10 +45,10 @@
         </section>
 
         <section>
-          <h2>Technical Skills</h2>
-          <ul id="skills">
-            <!-- Skills will be dynamically loaded -->
-          </ul>
+          <h2>Core Competencies</h2>
+          <div id="core-competencies">
+            <!-- Core competencies will be dynamically loaded -->
+          </div>
         </section>
 
         <section>
