--- a/index.html
+++ b/index.html
@@ -1,79 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
-    <link rel="stylesheet" href="style.css" />
-    <script defer src="script.js"></script>
-  </head>
-  <body>
-    <div class="container">
-      <header>
-        <h1 id="name"></h1>
-        <h2 id="title"></h2>
-        <p id="subsummary"></p>
-        <p id="contact"></p>
-        <p id="links"></p>
-      </header>
+<main>
 
-      <main>
-        <section>
-          <h2>Professional Summary</h2>
-          <p id="summary"></p>
-        </section>
+  <!-- 1. Professional Summary -->
+  <section>
+    <h2>Professional Summary</h2>
+    <p id="summary"></p>
+  </section>
 
-        <section>
-          <h2>Selected Projects & Research</h2>
-          <div id="projects">
-            <!-- Projects will be dynamically loaded -->
-          </div>
-        </section>
+  <!-- 2. Professional Experience -->
+  <section>
+    <h2>Professional Experience</h2>
+    <div id="experience"></div>
+  </section>
 
-        <section>
-          <h2>Professional Experience</h2>
-          <div id="experience">
-            <!-- Experience will be dynamically loaded -->
-          </div>
-        </section>
+  <!-- 3. Core Competencies -->
+  <section>
+    <h2>Core Competencies</h2>
+    <div id="core-competencies"></div>
+  </section>
 
-        <section>
-          <h2>Education</h2>
-          <div id="education">
-            <!-- Education will be dynamically loaded -->
-          </div>
-        </section>
+  <!-- 4. Education -->
+  <section>
+    <h2>Education</h2>
+    <div id="education"></div>
+  </section>
 
-        <section>
-          <h2>Core Competencies</h2>
-          <div id="core-competencies">
-            <!-- Core competencies will be dynamically loaded -->
-          </div>
-        </section>
+  <!-- 5. Selected Projects & Research -->
+  <section>
+    <h2>Selected Projects & Research</h2>
+    <div id="projects"></div>
+  </section>
 
-        <section>
-          <h2>Certifications</h2>
-          <ul id="certifications">
-            <!-- Certifications will be dynamically loaded -->
-          </ul>
-        </section>
+  <!-- 6. Certifications -->
+  <section>
+    <h2>Certifications</h2>
+    <ul id="certifications"></ul>
+  </section>
 
-        <section>
-          <h2>Languages</h2>
-          <p id="languages"></p>
-        </section>
+  <!-- 7. Skills -->
+  <section>
+    <h2>Skills</h2>
+    <ul id="skills"></ul>
+  </section>
 
-        <section>
-          <h2>Volunteering</h2>
-          <div id="volunteering">
-            <!-- Volunteering data will be dynamically loaded here -->
-          </div>
-        </section>
-      </main>
+  <!-- 8. Languages -->
+  <section>
+    <h2>Languages</h2>
+    <p id="languages"></p>
+  </section>
 
-      <footer>
-        <p id="footer"></p>
-      </footer>
-    </div>
-  </body>
-</html>
+  <!-- 9. Volunteering -->
+  <section>
+    <h2>Volunteering</h2>
+    <div id="volunteering"></div>
+  </section>
+
+</main>
