Add language switch buttons to index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         <p id="links"></p>
       </header>
 
+      <div id="lang-switch">
+        <button onclick="switchLang('en')">EN</button>
+        <button onclick="switchLang('pt')">PT</button>
+      </div>
+      
      <main>
     
       <!-- 1. Professional Summary -->
